# abby

./: .isort.cfg  404.html  Makefile  README.md  delta-method.ipynb  index.html  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
abby/: __init__.py  compare.py  diagnose.py
abby/tests/: test_bootstrap.py  test_delta.py  test_multiple.py  test_ttest.py
search/: search_index.json
