[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "abby"
authors = [{name = "Farhan Reynaldo", email = "farhanreynaldo@gmail.com"}]
description-file = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
requires = [
    "numpy==1.23.2",
    "pandas==1.4.3",
    "scipy==1.9.2",
    "tqdm==4.64.0",
]

[project.urls]
Home = "https://github.com/farhanreynaldo/abby"
