[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "abby"
author = "Farhan Reynaldo"
author-email = "farhanreynaldo@gmail.com"
description-file = "README.md"
home-page = "https://github.com/farhanreynaldo/abby"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
requires = [
    "numpy==1.21.6",
    "pandas==1.3.5",
    "scipy==1.7.3",
    "tqdm==4.64.0",
]
